--- a/templates/login.html
+++ b/templates/login.html
@@ -55,7 +55,7 @@
         <button type="submit">Login</button>
 
         <div class="wrapper">
-          <a href="/cadastrar">Não tem uma conta? Cadastre-se.</a>
+          <a href="/cadastrar_usuario">Não tem uma conta? Cadastre-se.</a>
           <a href="/recuperar_senha">Esqueceu a senha?</a>
         </div>
       </form>
