--- a/templates/erro_relacionamento_usuario_boletim_ocorrencia.html
+++ b/templates/erro_relacionamento_usuario_boletim_ocorrencia.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <title>Erro</title>
+        <link rel="shortcut icon" type="imagex/png" href="/static/imagens/PegaMalandroLogo.jpg">
     </head>
     <body>
         <h1 style='color: red;'>Erro - {{ erro }}</h1>
