--- a/templates/formulario_insercao_boletim_ocorrencia.html
+++ b/templates/formulario_insercao_boletim_ocorrencia.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset='UTF-8'>
     <title>Formulário de Inserção</title>
+    <link rel="shortcut icon" type="imagex/png" href="/static/imagens/PegaMalandroLogo.jpg">
     <link rel='stylesheet' href='../static/css/header-footer.css'>
     <link rel='stylesheet' href='../static/css/forms_inser_boletim_ocorrencia.css'>
 </head>
