--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,6 +3,7 @@
     <head>
         <link rel='stylesheet' href='../static/layout.css'>
         <title>Login</title>
+        <link rel="shortcut icon" type="imagex/png" href="/static/imagens/PegaMalandroLogo.jpg">
     </head>
     <body>
         <div class='grid-container'>
