--- a/templates/relatorio_grafico_pizza.html
+++ b/templates/relatorio_grafico_pizza.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <title>Relatório em Gráfico de Pizza</title>
+        <link rel="shortcut icon" type="imagex/png" href="/static/imagens/PegaMalandroLogo.jpg">
         <script type='text/javascript' src='https://www.gstatic.com/charts/loader.js'></script>
         <script type='text/javascript'>
             google.charts.load('current', { 'packages': ['corechart'] });
