--- a/templates/menu_policial.html
+++ b/templates/menu_policial.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pega Malandro</title>
+    <title>Menu Policial</title>
+    <link rel="shortcut icon" type="imagex/png" href="/static/imagens/PegaMalandroLogo.jpg">
     <link rel="stylesheet" href="../static/css/menupolicial.css">
 </head>
 <body>
