--- a/templates/resultado_insercao_usuario.html
+++ b/templates/resultado_insercao_usuario.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset='UTF-8'>
         <title>Resultado da Inserção</title>
+        <link rel="shortcut icon" type="imagex/png" href="/static/imagens/PegaMalandroLogo.jpg">
         <link rel='stylesheet' href='../static/style.css'>
     </head>
     <body>
