--- a/templates/formulario_insercao_boletim_ocorrencia.html
+++ b/templates/formulario_insercao_boletim_ocorrencia.html
@@ -83,7 +83,7 @@
                 <div class="testemunha">
                     <div class="dados_pessoais">
                         <div>
-                            <label for='id_policia'>Tem Testemunhas?</label>
+                            <label for='id_policia'>Quant. Testemunhas?</label>
                             <input type='number' name='id_policia' id='id_policia' required>
                             <label for='nome_testemunha'>Nome Completo:</label>
                             <input type='text' name='nome_testemunha' id='nome_testemunha' required>
@@ -109,28 +109,23 @@
                             <input type='text' name='nome_pai' id='nome_pai'>
                             <label for='nome_mae'>Nome da Mãe:</label>
                             <input type='text' name='nome_mae' id='nome_mae'>
-                        </div>
-                    </div>
-
-                    
-                    <div class="endereco_contato">
-                        <div>
                             <label for='cep'>CEP:</label>
                             <input type='text' name='cep' id='cep' required>
+                        </div>
+                        <div>
                             <label for='uf_testemunha'>UF:</label>
                             <input type='text' name='uf_testemunha' id='uf_testemunha' required>
                             <label for='cidade_testemunha'>Cidade:</label>
                             <input type='text' name='cidade_testemunha' id='cidade_testemunha' required>
-                        </div>
-                        <div>
                             <label for='area_testemunha'>Setor/Área:</label>
                             <input type='text' name='area_testemunha' id='area_testemunha' required>
                             <label for='endereco'>Endereço:</label>
                             <input type='text' name='endereco' id='endereco' required>
-                            <label for='complemento_testemunha'>Complemento:</label>
-                            <input type='text' name='complemento_testemunha' id='complemento_testemunha'>
+                            
                         </div>
                         <div>
+                            <label for='complemento_testemunha'>Complemento:</label>
+                            <input type='text' name='complemento_testemunha' id='complemento_testemunha'>
                             <label for='email_testemunha'>E-mail:</label>
                             <input type='email' name='email_testemunha' id='email_testemunha' required>
                             <label for='telefone1'>Telefone:</label>
