--- a/static/css/perfil_policial.css
+++ b/static/css/perfil_policial.css
@@ -1,5 +1,3 @@
-@import url(variables.css);
-
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
@@ -13,7 +11,7 @@ body {
     height: 80vh;
     margin: 0 auto;
     background-color: #fff;
-    padding:30px;
+    padding: 30px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
@@ -25,24 +23,23 @@ body {
     padding: 10px;
     color: #fff;
 }
+
 .top {
     display: flex;
-    align-items: flex-start; /* Alinha itens ao topo */
+    align-items: flex-start;
 }
 
 .foto {
-    position: relative; /* Relativo para permitir o posicionamento do status */
     display: flex;
-    align-items: center; /* Alinha itens verticalmente */
-    margin-right: 20px; /* Espaçamento entre a foto e os dados */
+    flex-direction: column;
+    align-items: center;
+    margin-right: 20px;
 }
 
 .status-online {
-    position: absolute; /* Absoluto para posicionar em relação à foto */
-    top: 0;
     display: flex;
-    ;
-    align-items: bottom; /* Alinha itens verticalmente */
+    align-items: center;
+    margin-top: 10px;
     font-size: 14px;
     color: #666;
 }
@@ -50,8 +47,8 @@ body {
 .status-dot {
     width: 10px;
     height: 10px;
-    background-color: #4CAF50; /* Cor da bolinha verde */
-    border-radius: 50%; /* Borda arredondada para a bolinha */
+    background-color: #4CAF50;
+    border-radius: 50%;
     display: inline-block;
     margin-right: 5px;
 }
@@ -59,16 +56,16 @@ body {
 .info {
     display: flex;
     flex-wrap: wrap;
-    flex-grow: 1; /* Ocupa todo o espaço disponível */
+    flex-grow: 1;
 }
 
 .form-group {
-    flex-basis: calc(50% - 10px); /* 50% de largura menos o espaçamento */
+    flex-basis: calc(50% - 10px);
     margin-bottom: 20px;
 }
 
 .form-group:nth-child(odd) {
-    margin-right: 20px; /* Adiciona margem à direita em grupos ímpares */
+    margin-right: 20px;
 }
 
 label {
@@ -134,12 +131,15 @@ p {
     border: 1px solid #999;
 }
 
-.tabela-ocorrencias {
+.tabela-ocorrencias-container {
     margin-top: 20px;
+    height: 70%;
+    overflow-y: auto;
 }
 
 .tabela-ocorrencias table {
     width: 100%;
+    font-size: large;
     border-collapse: collapse;
     margin-top: 10px;
 }
@@ -166,9 +166,7 @@ button {
     cursor: pointer;
 }
 
-.btn-mudar-senha,
-.btn-confirmar,
-.btn-alterar {
+.btn-alterar-senha {
     background-color: #4c4c4c;
     color: #fff;
     margin-right: 10px;
