--- a/templates/perfil_policial.html
+++ b/templates/perfil_policial.html
@@ -77,9 +77,9 @@
                     </div>
                 </div>
             </div>
-            
+            <h2>Tabela de Ocorrências</h2>
+            <div class="tabela-ocorrencias-container">
                 <div class="tabela-ocorrencias">
-                    <h2>Tabela de Ocorrências</h2>
                     <table>
                         <thead>
                             <tr>
@@ -89,19 +89,43 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>001</td>
-                                <td>Assalto</td>
-                                <td>Resolvido</td>
-                            </tr>
+                            <tr><td>001</td><td>Assalto</td><td>Resolvido</td></tr>
+                            <tr><td>002</td><td>Roubo</td><td>Pendente</td></tr>
+                            <tr><td>003</td><td>Furto</td><td>Resolvido</td></tr>
+                            <tr><td>004</td><td>Homicídio</td><td>Em andamento</td></tr>
+                            <tr><td>005</td><td>Sequestro</td><td>Resolvido</td></tr>
+                            <tr><td>006</td><td>Estupro</td><td>Pendente</td></tr>
+                            <tr><td>007</td><td>Tráfico de drogas</td><td>Resolvido</td></tr>
+                            <tr><td>008</td><td>Violência doméstica</td><td>Resolvido</td></tr>
+                            <tr><td>009</td><td>Fraude</td><td>Pendente</td></tr>
+                            <tr><td>010</td><td>Corrupção</td><td>Em andamento</td></tr>
+                            <tr><td>011</td><td>Extorsão</td><td>Resolvido</td></tr>
+                            <tr><td>012</td><td>Lesão corporal</td><td>Pendente</td></tr>
+                            <tr><td>013</td><td>Contrabando</td><td>Resolvido</td></tr>
+                            <tr><td>014</td><td>Desaparecimento</td><td>Resolvido</td></tr>
+                            <tr><td>015</td><td>Latrocínio</td><td>Pendente</td></tr>
+                            <tr><td>016</td><td>Estelionato</td><td>Resolvido</td></tr>
+                            <tr><td>017</td><td>Vandalismo</td><td>Em andamento</td></tr>
+                            <tr><td>018</td><td>Abuso de autoridade</td><td>Pendente</td></tr>
+                            <tr><td>019</td><td>Invasão de propriedade</td><td>Resolvido</td></tr>
+                            <tr><td>020</td><td>Atentado ao pudor</td><td>Resolvido</td></tr>
+                            <tr><td>021</td><td>Assédio</td><td>Em andamento</td></tr>
+                            <tr><td>022</td><td>Ameaça</td><td>Pendente</td></tr>
+                            <tr><td>023</td><td>Abandono de incapaz</td><td>Resolvido</td></tr>
+                            <tr><td>024</td><td>Incêndio</td><td>Resolvido</td></tr>
+                            <tr><td>025</td><td>Lesão corporal grave</td><td>Pendente</td></tr>
+                            <tr><td>026</td><td>Porte ilegal de armas</td><td>Resolvido</td></tr>
+                            <tr><td>027</td><td>Exploração infantil</td><td>Resolvido</td></tr>
+                            <tr><td>028</td><td>Desacato</td><td>Pendente</td></tr>
+                            <tr><td>029</td><td>Receptação</td><td>Em andamento</td></tr>
+                            <tr><td>030</td><td>Lavagem de dinheiro</td><td>Resolvido</td></tr>
                         </tbody>
                     </table>
                 </div>
-                <div class="buttons">
-                    <button type="submit" class="btn-confirmar">Confirmar</button>
-                    <button type="button" class="btn-alterar">Alterar</button>
-                </div>
-            </form>
+            </div>
+            <div class="buttons">
+                <button type="submit" class="btn-alterar-senha">Alterar Senha</button>
+            </div>
         </div>
       </main>
     
