--- a/static/css/boletim.css
+++ b/static/css/boletim.css
@@ -80,3 +80,39 @@ main {
 .buttons button:hover {
     background-color: darkgray;
 }
+
+
+@media (max-width: 768px) {
+    .boletim_box {
+        width: 100%;
+    }
+    .boletim_box .form-row {
+        flex-direction: column;
+    }
+    .boletim_box .form-row > div {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+    .buttons {
+        flex-direction: column;
+    }
+    .buttons button {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    .buttons button:last-child {
+        margin-bottom: 0;
+    }
+}
+
+@media (max-width: 480px) {
+    .boletim_box input, .boletim_box select, .boletim_box textarea {
+        width: calc(100% - 20px);
+    }
+    .boletim_box h2 {
+        font-size: 18px;
+    }
+    .buttons button {
+        padding: 10px;
+    }
+}
