--- a/templates/perfil_policial.html
+++ b/templates/perfil_policial.html
@@ -43,12 +43,13 @@
         <div class="container">
             <div class="top">
                 <div class="foto">
-                    <label></label>
-                    <div class="foto-placeholder"></div>
-                    <div class="status-online">
-                        <span class="status-dot"></span>
-                        <span class="status-text">Online</span>
-                    </div>
+                  <label>      
+                    <img src="../static/imagens/Patentes/Coronel/Coronel1.jpg" alt="Foto do Policial">
+                </label>
+                <div class="status-online">
+                    <span class="status-dot"></span>
+                    <span class="status-text">Online</span>
+                </div>
                 </div>
                 <div class="info">
                     <div class="form-group">
