Added responsiveness to formulario_insercao_boletim_ocorrencia

--- a/static/css/cadastro-usuario.css
+++ b/static/css/cadastro-usuario.css
@@ -87,7 +87,7 @@ main .logo {
   margin: 0 0 2rem 0;
   padding: 1rem;
 
-  font-size: 2rem;
+  font-size: 2em;
 
   border-radius: 10px 10px 0 0;
 
