--- a/static/css/forms_inser_boletim_ocorrencia.css
+++ b/static/css/forms_inser_boletim_ocorrencia.css
@@ -1,79 +1,92 @@
+@import "variables.css";
+
 main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.formulario_case {
-    width: 50%;
-    padding: 20px;
-    background-color: #b1acac;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
+form {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+
+  border-radius: 10px;
+
+  width: 60%;
+  min-height: 42rem;
+
+  background-color: var(--background-color-white);
 }
 
-.ocorrencia,
-.testemunha {
-    text-align: left;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    margin-bottom: 20px;
-    margin-top: 20px;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+
+  width: 100%;
+  min-height: 42rem;
+
+  padding: 0 2rem;
 }
 
-.data_hora {
-    display: flex;
-    flex-direction: row;;
-    align-items: left;
-    width: 40%;
-    margin: 0 20px 0 0;
+.form-container {
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 100%;
 }
 
-.data_hora_board {
-    display: flex;
-    flex-direction: column;
-    margin-right: 5px;
+.form-container-wrapper {
+  display: flex;
+
+  margin-top: 1rem;
 }
 
-.local_descricao {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 100%;
+.form-container-date {
+  display: flex;
+  flex-direction: column;
+
+  width: 100%;
+
+  margin-right: 0.6rem;
 }
 
-.local_descricao_board {
-    display: flex;
-    flex-direction: column;
-    width: 48%;
+.form-container-date-wrapper {
+  display: flex;
+  flex-direction: column;
+
+  width: 30%;
 }
 
-.testemunha .dados_pessoais,
-.testemunha .endereco_contato {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    margin-bottom: 20px;
+.form-container-local {
+  display: flex;
+  flex-direction: column;
+
+  width: 30%;
+
+  margin-left: 0.6rem;
 }
 
-.testemunha .dados_pessoais div,
-.testemunha .endereco_contato div {
-    display: flex;
-    flex-direction: column;
-    margin-right: 20px;
-    flex: 1;
+.form-container-local:nth-of-type(2) {
+  width: 70%;
 }
 
-.testemunha .dados_pessoais div:last-child,
-.testemunha .endereco_contato div:last-child {
-    margin-right: 0;
+.form-container-local:nth-last-of-type(4) {
+  width: 30%;
+}
+
+.form-container-local:nth-last-of-type(5) {
+  margin-left: 0;
+}
+
+.form-container-local-wrapper {
+  display: flex;
+
+  width: 70%;
 }
 
 /* Estilo para inputs */
@@ -85,16 +98,23 @@ input[type="email"],
 input[type="tel"],
 textarea,
 select {
-    width: 100%;
-    padding: 10px;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-    font-size: 12px;
-    font-family: Arial, sans-serif;
-    transition: border-color 0.3s, box-shadow 0.3s;
+  width: 100%;
+  height: 3.15rem;
+
+  padding: 10px;
+
+  margin-top: 5px;
+  margin-bottom: 10px;
+
+  border: 1px solid var(--background-color-blue-light);
+  border-radius: 5px;
+
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+
+  font-size: 12px;
+  font-family: Arial, sans-serif;
+
+  transition: border-color 0.3s, box-shadow 0.3s;
 }
 
 input[type="text"]:focus,
@@ -105,29 +125,71 @@ input[type="email"]:focus,
 input[type="tel"]:focus,
 textarea:focus,
 select:focus {
-    border-color: #66afe9;
-    box-shadow: 0 0 8px rgba(102, 175, 233, 0.6);
-    outline: none;
+  box-shadow: 0 0 8px var(--background-color-blue-light);
+
+  outline: none;
+
+  border-color: var(--background-color-logo-blue-lighter);
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  appearance: none;
 }
 
 textarea {
-    resize: vertical;
-    min-height: 100px;
+  resize: vertical;
+
+  height: 64.1%;
 }
 
-input[type="submit"] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 15px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 10px;
-    margin-right: 10px;
-    transition: background-color 0.3s;
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 7rem;
+  height: 3.5rem;
+
+  margin: 2rem;
+
+  border: none;
+  border-radius: 10px;
+
+  font-size: 1.3rem;
+
+  color: var(--text-color-light);
+  background-color: var(--background-color-logo-blue-light);
+
+  cursor: pointer;
+
+  transition: 120ms ease-in-out;
 }
 
-input[type="submit"]:hover {
-    background-color: #45a049;
+button:hover {
+  transform: translateY(-3px);
+  background-color: var(--background-color-logo-blue-lighter);
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+
+  width: 100%;
+}
+
+main .logo {
+  justify-content: center;
+
+  width: 100%;
+
+  margin: 0 0 2rem 0;
+  padding: 1rem;
+
+  font-size: 1.5rem;
+
+  border-radius: 10px 10px 0 0;
+
+  color: var(--text-color-light);
+  background-color: var(--background-color-logo-blue);
 }
