--- a/templates/cadastro_usuario.html
+++ b/templates/cadastro_usuario.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro</title>
-    <link rel="shortcut icon" type="imagex/png" href="/static/imagens/PegaMalandroLogo.jpg">
+    <link
+      rel="shortcut icon"
+      type="imagex/png"
+      href="/static/imagens/PegaMalandroLogo.jpg"
+    />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -87,7 +91,7 @@
 
         <div class="form-container">
           <input required type="email" placeholder="Email:" />
-          <input required type="number" placeholder="Telefone:" />
+          <input required type="tel" placeholder="Telefone:" />
         </div>
 
         <div class="form-container">
