--- a/templates/formulario_insercao_boletim_ocorrencia.html
+++ b/templates/formulario_insercao_boletim_ocorrencia.html
@@ -1,155 +1,269 @@
 <!DOCTYPE html>
-<html lang='pt-BR'>
-
-<head>
-    <meta charset='UTF-8'>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
     <title>Formulário de Inserção</title>
-    <link rel="shortcut icon" type="imagex/png" href="/static/imagens/PegaMalandroLogo.jpg">
-    <link rel='stylesheet' href='../static/css/header-footer.css'>
-    <link rel='stylesheet' href='../static/css/forms_inser_boletim_ocorrencia.css'>
-</head>
+    <link
+      rel="shortcut icon"
+      type="imagex/png"
+      href="/static/imagens/PegaMalandroLogo.jpg"
+    />
 
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Anton%7CBaskervville%7CRaleway&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    />
+    <link rel="stylesheet" href="../static/css/header-footer.css" />
+    <link
+      rel="stylesheet"
+      href="../static/css/forms_inser_boletim_ocorrencia.css"
+    />
+  </head>
+
+  <body>
     <header class="header">
-        <div class="logo">
-            <img src="/static/imagens/PegaMalandroLogo.jpg" alt="icone" />
-            <h1 class="brand-name">Pega Malandro</h1>
-        </div>
-        <nav class="nav-bar">
-            <ul>
-                <li>
-                    <a class="nav-link" href="/">Voltar</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="formulario_case">
-            <form action='../controllers/boletim_ocorrencia.php' method='POST'>
-                <label for="ocorrencia">Escolha a Ocorrência:</label>
-                <select name="ocorrencia" id="ocorrencia">
-                    <option value="1">Roubo</option>
-                    <option value="2">Furto</option>
-                    <option value="3">Sequestro</option>
-                    <option value="4">Estupro</option>
-                    <option value="5">Homicídio</option>
-                    <option value="6">Lesão Corporal</option>
-                    <option value="7">Ameaça</option>
-                    <option value="8">Dano</option>
-                    <option value="9">Estelionato</option>
-                    <option value="10">Tráfico de Drogas</option>
-                    <option value="11">Porte Ilegal de Arma</option>
-                </select>
-                
-                <h2>Dados da Ocorrência</h2>
+      <div class="logo">
+        <img src="/static/imagens/PegaMalandroLogo.jpg" alt="icone" />
+        <h1 class="brand-name">Pega Malandro</h1>
+      </div>
 
-                <div class="ocorrencia">
-                    <div class="data_hora">
-                        <div class="data_hora_board">
-                            <label for='data_inicio'>Data Início:</label>
-                            <input type='date' name='data_inicio' id='data_inicio' required>
-                            <label for='hora_inicio'>Hora Início:</label>
-                            <input type='time' name='hora_inicio' id='hora_inicio' required>
-                        </div>
-                        <div class="data_hora_board">
-                            <label for='data_fim'>Data Fim:</label>
-                            <input type='date' name='data_fim' id='data_fim' required>
-                            <label for='hora_fim'>Hora Fim:</label>
-                            <input type='time' name='hora_fim' id='hora_fim' required>
-                        </div>
-                    </div>
-                    <div class="local_descricao">
-                        <div class="local_descricao_board">
-                            <label for='uf'>UF:</label>
-                            <input type='text' name='uf' id='uf' required>
-                            <label for='cidade'>Cidade:</label>
-                            <input type='text' name='cidade' id='cidade' required>
-                            <label for='area'>Setor/Área:</label>
-                            <input type='text' name='area' id='area' required>
-                        </div>
-                        <div class="local_descricao_board">
-                            <label for='quadra'>Quadra:</label>
-                            <input type='text' name='quadra' id='quadra' required>
-                            <label for='complemento'>Complemento:</label>
-                            <input type='text' name='complemento' id='complemento'>
-                            <label for='descricao'>Descrição:</label>
-                            <textarea name='descricao' id='descricao' required></textarea>
-                        </div>
-                    </div>
-                </div>
-
-                <h2>Dados da Testemunha</h2>
-
-                <div class="testemunha">
-                    <div class="dados_pessoais">
-                        <div>
-                            <label for='id_policia'>Quant. Testemunhas?</label>
-                            <input type='number' name='id_policia' id='id_policia' required>
-                            <label for='nome_testemunha'>Nome Completo:</label>
-                            <input type='text' name='nome_testemunha' id='nome_testemunha' required>
-                            <label for='cpf_testemunha'>CPF:</label>
-                            <input type='number' name='cpf_testemunha' id='cpf_testemunha' required>
-                            <label for='rg_testemunha'>RG:</label>
-                            <input type='number' name='rg_testemunha' id='rg_testemunha' required>
-                        </div>
-                        <div>
-                            <label for='orgao_emissor'>Órgão Emissor:</label>
-                            <input type='text' name='orgao_emissor' id='orgao_emissor' required>
-                            <label for='data_nascimento_testemunha'>Data Nascimento:</label>
-                            <input type='date' name='data_nascimento_testemunha' id='data_nascimento_testemunha' required>
-                            <label for='raca'>Raça:</label>
-                            <input type='text' name='raca' id='raca' required>
-                            <label for='sexo'>Sexo de Nascimento:</label>
-                            <input type='text' name='sexo' id='sexo' required>
-                        </div>
-                        <div>
-                            <label for='passaporte'>Passaporte:</label>
-                            <input type='text' name='passaporte' id='passaporte'>
-                            <label for='nome_pai'>Nome do Pai:</label>
-                            <input type='text' name='nome_pai' id='nome_pai'>
-                            <label for='nome_mae'>Nome da Mãe:</label>
-                            <input type='text' name='nome_mae' id='nome_mae'>
-                            <label for='cep'>CEP:</label>
-                            <input type='text' name='cep' id='cep' required>
-                        </div>
-                        <div>
-                            <label for='uf_testemunha'>UF:</label>
-                            <input type='text' name='uf_testemunha' id='uf_testemunha' required>
-                            <label for='cidade_testemunha'>Cidade:</label>
-                            <input type='text' name='cidade_testemunha' id='cidade_testemunha' required>
-                            <label for='area_testemunha'>Setor/Área:</label>
-                            <input type='text' name='area_testemunha' id='area_testemunha' required>
-                            <label for='endereco'>Endereço:</label>
-                            <input type='text' name='endereco' id='endereco' required>
-                            
-                        </div>
-                        <div>
-                            <label for='complemento_testemunha'>Complemento:</label>
-                            <input type='text' name='complemento_testemunha' id='complemento_testemunha'>
-                            <label for='email_testemunha'>E-mail:</label>
-                            <input type='email' name='email_testemunha' id='email_testemunha' required>
-                            <label for='telefone1'>Telefone:</label>
-                            <input type='tel' name='telefone1' id='telefone1' required>
-                            <label for='telefone2'>Telefone Alternativo:</label>
-                            <input type='tel' name='telefone2' id='telefone2'>
-                        </div>
-                    </div>
-                </div>
-
-                <input type='submit' value='Inserir'>
-                <input type='submit' value='Voltar'>
-                <input type='submit' value='Finalizar'>
-            </form>
-        </section>
-    </main>
-    <footer class="footer">
+      <nav class="nav-bar">
         <ul>
-            <li><a href="">Privacy</a></li>
-            <li><a href="">Terms</a></li>
-            <li><a href="">Contact</a></li>
+          <li>
+            <a class="nav-link" href="/">Voltar</a>
+          </li>
         </ul>
-        <span>Copyright 2024</span>
-    </footer>
-</body>
+      </nav>
+    </header>
 
+    <main>
+      <form action="../controllers/boletim_ocorrencia.php" method="POST">
+        <div class="logo">
+          <h1 class="brand-name">Pega Malandro</h1>
+        </div>
+
+        <div class="wrapper">
+          <label for="ocorrencia">Escolha a Ocorrência:</label>
+
+          <select name="ocorrencia" id="ocorrencia">
+            <option value="1">Roubo</option>
+            <option value="2">Furto</option>
+            <option value="3">Sequestro</option>
+            <option value="4">Estupro</option>
+            <option value="5">Homicídio</option>
+            <option value="6">Lesão Corporal</option>
+            <option value="7">Ameaça</option>
+            <option value="8">Dano</option>
+            <option value="9">Estelionato</option>
+            <option value="10">Tráfico de Drogas</option>
+            <option value="11">Porte Ilegal de Arma</option>
+          </select>
+
+          <h2>Dados da Ocorrência</h2>
+
+          <div class="form-container-wrapper">
+            <div class="form-container-date-wrapper">
+              <div class="form-container-date">
+                <label for="data_inicio">Data Início:</label>
+                <input
+                  type="date"
+                  name="data_inicio"
+                  id="data_inicio"
+                  required
+                />
+
+                <label for="hora_inicio">Hora Início:</label>
+                <input
+                  type="time"
+                  name="hora_inicio"
+                  id="hora_inicio"
+                  required
+                />
+              </div>
+
+              <div class="form-container-date">
+                <label for="data_fim">Data Fim:</label>
+                <input type="date" name="data_fim" id="data_fim" required />
+
+                <label for="hora_fim">Hora Fim:</label>
+                <input type="time" name="hora_fim" id="hora_fim" required />
+              </div>
+            </div>
+
+            <div class="form-container-local-wrapper">
+              <div class="form-container-local">
+                <label for="uf">UF:</label>
+                <input type="text" name="uf" id="uf" required />
+
+                <label for="cidade">Cidade:</label>
+                <input type="text" name="cidade" id="cidade" required />
+
+                <label for="area">Setor/Área:</label>
+                <input type="text" name="area" id="area" required />
+
+                <label for="quadra">Quadra:</label>
+                <input type="text" name="quadra" id="quadra" required />
+              </div>
+
+              <div class="form-container-local">
+                <label for="complemento">Complemento:</label>
+                <input type="text" name="complemento" id="complemento" />
+
+                <label for="descricao">Descrição:</label>
+                <textarea name="descricao" id="descricao" required></textarea>
+              </div>
+            </div>
+          </div>
+
+          <h2>Dados da Testemunha</h2>
+
+          <div class="form-container-wrapper">
+            <div class="form-container-local">
+              <label for="id_policia">Quant. Testemunhas?</label>
+              <input type="number" name="id_policia" id="id_policia" required />
+
+              <label for="nome_testemunha">Nome Completo:</label>
+              <input
+                type="text"
+                name="nome_testemunha"
+                id="nome_testemunha"
+                required
+              />
+
+              <label for="cpf_testemunha">CPF:</label>
+              <input
+                type="number"
+                name="cpf_testemunha"
+                id="cpf_testemunha"
+                required
+              />
+
+              <label for="rg_testemunha">RG:</label>
+              <input
+                type="number"
+                name="rg_testemunha"
+                id="rg_testemunha"
+                required
+              />
+            </div>
+
+            <div class="form-container-local">
+              <label for="orgao_emissor">Órgão Emissor:</label>
+              <input
+                type="text"
+                name="orgao_emissor"
+                id="orgao_emissor"
+                required
+              />
+
+              <label for="data_nascimento_testemunha">Data Nascimento:</label>
+              <input
+                type="date"
+                name="data_nascimento_testemunha"
+                id="data_nascimento_testemunha"
+                required
+              />
+
+              <label for="raca">Raça:</label>
+              <input type="text" name="raca" id="raca" required />
+
+              <label for="sexo">Sexo de Nascimento:</label>
+              <input type="text" name="sexo" id="sexo" required />
+            </div>
+
+            <div class="form-container-local">
+              <label for="passaporte">Passaporte:</label>
+              <input type="text" name="passaporte" id="passaporte" />
+
+              <label for="nome_pai">Nome do Pai:</label>
+              <input type="text" name="nome_pai" id="nome_pai" />
+
+              <label for="nome_mae">Nome da Mãe:</label>
+              <input type="text" name="nome_mae" id="nome_mae" />
+
+              <label for="cep">CEP:</label>
+              <input type="text" name="cep" id="cep" required />
+            </div>
+
+            <div class="form-container-local">
+              <label for="uf_testemunha">UF:</label>
+              <input
+                type="text"
+                name="uf_testemunha"
+                id="uf_testemunha"
+                required
+              />
+
+              <label for="cidade_testemunha">Cidade:</label>
+              <input
+                type="text"
+                name="cidade_testemunha"
+                id="cidade_testemunha"
+                required
+              />
+
+              <label for="area_testemunha">Setor/Área:</label>
+              <input
+                type="text"
+                name="area_testemunha"
+                id="area_testemunha"
+                required
+              />
+
+              <label for="endereco">Endereço:</label>
+              <input type="text" name="endereco" id="endereco" required />
+            </div>
+
+            <div class="form-container-local">
+              <label for="complemento_testemunha">Complemento:</label>
+              <input
+                type="text"
+                name="complemento_testemunha"
+                id="complemento_testemunha"
+              />
+
+              <label for="email_testemunha">E-mail:</label>
+              <input
+                type="email"
+                name="email_testemunha"
+                id="email_testemunha"
+                required
+              />
+
+              <label for="telefone1">Telefone:</label>
+              <input type="tel" name="telefone1" id="telefone1" required />
+
+              <label for="telefone2">Telefone Alternativo:</label>
+              <input type="tel" name="telefone2" id="telefone2" />
+            </div>
+          </div>
+        </div>
+
+        <div class="buttons">
+          <button id="inserir" type="submit">Inserir</button>
+          <button id="voltar" type="submit">Voltar</button>
+          <button id="finalizar" type="submit">Finalizar</button>
+        </div>
+      </form>
+    </main>
+
+    <footer class="footer">
+      <ul>
+        <li><a href="">Privacy</a></li>
+        <li><a href="">Terms</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+      <span>Copyright 2024</span>
+    </footer>
+  </body>
 </html>
